O365: Improve error message on missing add-exports, see https://github.com/mguessan/davmail/issues/344
git-svn-id: https://svn.code.sf.net/p/davmail/code/trunk@3540 3d1905a2-6b24-0410-a738-b14d5a86fcbd